Kubernetes/kubernetes-basics/manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: confluence
  labels:
    environment: demo
    app: confluence
spec:
  containers:
    - name: confluence
      image: atlassian/confluence-server:6.13-ubuntu-18.04-adoptopenjdk8
      ports:
        - containerPort: 8090
        - containerPort: 8091
    #- name: front-end
    #   image: nginx
    #   ports:
    #     - containerPort: 80
