Kubernetes/kubernetes-basics/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: confluence-svc
spec:
  selector:
    app: confluence
  type: ClusterIP
  #type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 8090
    targetPort: 8090
  - name: sync
    protocol: TCP
    port: 8091
    targetPort: 8091
