Kubernetes/kubernetes-basics/manifests/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: confluence-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/acme-challenge-type: http01 
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod-http
    nginx.ingress.kubernetes.io/session-cookie-name: JSESSIONID
    nginx.ingress.kubernetes.io/session-cookie-path: /
    nginx.ingress.kubernetes.io/session-cookie-change-on-failure: "true"
    #nginx.ingress.kubernetes.io/session-cookie-max-age
    #nginx.ingress.kubernetes.io/session-cookie-expires	
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/app-root:          /
    #certmanager.k8s.io/acme-dns01-provider:        route53
spec:
  tls:
  - hosts: 
    - demo-confluence.platformdxc-mg-d0.com
    secretName: demo-confluence-tls
  rules:
  - host: demo-confluence.platformdxc-mg-d0.com
    http:
      paths:
      - path: /
        backend:
          serviceName: confluence-svc
          servicePort: 8090
