Kubernetes/kubernetes-basics/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: confluence-ingress
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx  
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod-http
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
    certmanager.k8s.io/acme-dns01-provider: route53
spec:
  tls:
  - hosts:
    - confluence-demo.platformdxc-mg-d0.com
    secretName: demo-confluence-tls
  rules:
  - host: demo-confluence.platformdxc-mg-d0.com
    http:
      paths:
      - path: /
        backend:
          serviceName: confluence-svc
          servicePort: 8090
